--- a/svg-lund.html
+++ b/svg-lund.html
@@ -10,7 +10,7 @@
     <svg version="1.1"   style="max-width: 100%; margin: 0 auto;" preserveAspectRatio="xMinYMin meet" viewBox="0 0 604 147.5" enable-background="new 0 0 604 147.5"
          xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/">
 
-        <path  class="lund" stroke-linecap="round" d="M604,147H465.5l0,0l-0.1-0.1l-0.3-0.1l-3.5-28.1l0.1,0l0-0.2l0-0.2
+        <path  class="lund" stroke-linecap="round" stroke-linejoin="miter" d="M604,147H465.5l0,0l-0.1-0.1l-0.3-0.1l-3.5-28.1l0.1,0l0-0.2l0-0.2
 	l-0.6-0.5l-1-7.3l0.3-0.3l0.2,0l0.1-0.1l-6.8-16.6l-0.1-1.3l-0.2-0.1l0-0.3c0,0,0.2-0.1,0.2-0.3c0.1-0.1,0.1-0.3,0-0.6
 	c0-0.3-0.2-0.4-0.3-0.4c-0.1,0-0.2,0.1-0.2,0.1s-0.2-0.1-0.4,0c-0.3,0-0.5,0.4-0.5,0.4l0.1,0.8l0.3,0.2l0.1,0.2l-0.2,0.2l0.1,0.7
 	l0.1,0.1l0,0.5l-0.2,0.1l-0.1,0.3l-27.6,8L385.1,88l0-0.2l0.2,0l0.2-0.3l-0.1-0.4c0,0,0.2-0.1,0.3-0.2c0.1-0.2-0.2-0.4-0.2-0.4
